<?xml version="1.0"?>
<package>
  <name>tf2_gazebo</name>
  <version>0.0.0</version>
  <description>The tf2_gazebo package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>tf2</run_depend>

</package>
